--- a/src/assets/_base.scss
+++ b/src/assets/_base.scss
@@ -45,6 +45,18 @@ body {
   @media screen and (min-width: services.$tabletSmall) {
     font-size: 15px;
   }
+
+  @media screen and (min-width: 1280px) {
+    $border-color: #d5d4d4;
+
+    background:
+      linear-gradient($border-color, transparent 1px),
+      linear-gradient(90deg, $border-color, transparent 1px),
+      #f1f1f1;
+    background-size: 10px 10px;
+    background-attachment: fixed;
+    background-position: center top;
+  }
 }
 
 a {
