--- a/src/assets/_base.scss
+++ b/src/assets/_base.scss
@@ -22,6 +22,8 @@
   --easeInOutQuint: cubic-bezier(0.86, 0, 0.07, 1);
   --easeInOutCirc: cubic-bezier(0.785, 0.135, 0.15, 0.86);
   --easeOutBack: cubic-bezier(0.175, 0.885, 0.32, 1.275);
+
+  --mu-transition-property: .6s var(--easeOutBack) 0s;
 }
 
 html,
